--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -24,8 +24,8 @@ jobs:
             curl -sSfL "https://iptoasn.com/data/$file.gz" > data/$file.gz
           done
       - run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email ""
+          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com>"
+          git config --global user.name "${GITHUB_ACTOR}"
       - id: commit
         run: |
           git add data/*.gz
