--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -24,8 +24,8 @@ jobs:
             curl -sSfL "https://iptoasn.com/data/$file.gz" > data/$file.gz
           done
       - run: |
-          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com>"
-          git config --global user.name "${GITHUB_ACTOR}"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
       - id: commit
         run: |
           git add data/*.gz
